2004-01-17 Jordi Mas i Hernandez <jordi@ximian.com>

        * Graphics.cs: calls XCloseDisplay on X11 when need it
        * gdipFunctions.cs: calls XCloseDisplay on X11 when need it

2004-12-27  Zoltan Varga  <vargaz@freemail.hu>

	* gdipFunctions.cs Image.cs: Fix marshalling of arrays on amd64.

2004-12-16  Peter Bartok  <pbartok@novell.com>

	* Graphics.cs (GetHdc): Removed Wine assumptions, the handle is now
	  equivalent to the gdi+ native object

	* Font.cs (GetHfont): Removed Wine assumptions, the handle is now
	  equivalent to the gdi+ native object

2004-12-09  Geoff Norton  <gnorton@customerdna.com>

	* carbonFunctions.cs: New carbon functions/structures
	* Graphics.cs: Update FromHwnd to work without being in the carbon eventing loop

2004-12-08  Geoff Norton  <gnorton@customerdna.com>

	* Graphics.cs:  Drop FromHwndWithSize; we can't change the public API
	Add Quartz support to FromHwnd marshalling a struct back with the ptr/width/height.

2004-12-07  Geoff Norton  <gnorton@customerdna.com>

        * Graphics.cs:  Add FromHwndWithSize for the MWF/Quartz backend
        * gdipFunctions.cs: Add the quartz dllimport into libgdiplus

2004-12-06  Miguel de Icaza  <miguel@ximian.com>

	* FontFamily.cs: This one is static.

2004-11-25  Ravindra  <rkumar@novell.com>

	* gdipFunctions.cs (GdipCreateFontFromLogfontA): Changed return
	type from int to Status type.

2004-11-25  Marek Safar  <marek.safar@seznam.cz>

	* Image.cs: Add CheckStatus to SaveAdd.

2004-11-22  Ravindra  <rkumar@novell.com>

	* Graphics.cs: Fixed null values handling in all overloads of
	MeasureString method.

2004-11-18  Ravindra  <rkumar@novell.com>

	* gdipFunctions.cs: Removed the .so extension from a DllImport
	that hooks to X11.

2004-10-27 Jordi Mas i Hernandez <jordi@ximian.com>

	* gdipFunctions.cs: calls GdiplusShutdown to propery signal GDI+ 
	termination

2004-11-03  Miguel de Icaza  <miguel@ximian.com>

	* TextureBrush.cs (Clone): While cloning, it is not enough to let